--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ mixin_version=0.8.5
 mixingradle_version = 0.7.+
 jei_version=11.2.0.246
 mc_version=1.19.2
-mod_version = 1.19.2-0.1
+mod_version = 0.1
 
 jarVersion = 0.1
 
