--- a/gradle.properties
+++ b/gradle.properties
@@ -3,14 +3,13 @@
 org.gradle.jvmargs=-Xmx7G
 org.gradle.daemon=false
 
-curios_version =1.19.2-5.1.1.0
-jei_minecraft_version=1.19.2
+curios_version =1.18.2-5.0.7.1
 mixin_version=0.8.5
-mixingradle_version = 0.7.+
-jei_version=11.2.0.246
-mc_version=1.19.2
+mixingradle_version = 0.7-SNAPSHOT
+jei_version=9.7.0.209
+mc_version=1.18.2
 mod_version = 0.1
 
 jarVersion = 0.1
 
-registrate_version = MC1.19-1.1.5
+registrate_version = MC1.18.2-1.1.3
