--- a/gradle.properties
+++ b/gradle.properties
@@ -3,14 +3,15 @@
 org.gradle.jvmargs=-Xmx7G
 org.gradle.daemon=false
 
-curios_version =1.19.2-5.1.1.0
-jei_minecraft_version=1.19.2
+curios_version = 5.2.0-beta.3
+curios_minecraft_version = 1.20.1
+jei_minecraft_version=1.20.1
 mixin_version=0.8.5
 mixingradle_version = 0.7.+
-jei_version=11.2.0.246
-mc_version=1.19.2
+jei_version=15.2.0.22
+mc_version=1.20.1
 mod_version = 0.1
 
 jarVersion = 0.1
 
-registrate_version = MC1.19-1.1.5
+registrate_version = MC1.20-1.3.3
