--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -64,3 +64,9 @@ Kasuga Lib is a base mod aiming at simplify modding.
     versionRange="[1.19.2,1.20)"
     ordering="NONE"
     side="BOTH"
+[[dependencies.kasuga_lib]]
+    modId="create"
+    mandatory=true
+    versionRange="[0.5.1.e,)"
+    ordering="NONE"
+    side="BOTH"
