--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,7 @@ mod_version = 0.1
 jarVersion = 0.1
 
 registrate_version = MC1.19-1.1.5
+create_minecraft_version = 1.19.2
+flywheel_minecraft_version = 1.19.2
+create_version = 0.5.1.e-44
+flywheel_version = 0.6.10-20
