更新制作者名单

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -31,7 +31,7 @@ logoFile="kasuga_lib.png" #optional
 # A text field displayed in the mod UI
 credits="KasugaLib Group" #optional
 # A text field displayed in the mod UI
-authors="MegumiKasuga" #optional
+authors="KasugaLibTeam" #optional
 # Display Test controls the display for your mod in the server connection screen
 # MATCH_VERSION means that your mod will cause a red X if the versions on client and server differ. This is the default behaviour and should be what you choose if you have server and client elements to your mod.
 # IGNORE_SERVER_VERSION means that your mod will not cause a red X if it's present on the server but not on the client. This is what you should use if you're a server only mod.
