--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,8 @@ mod_version = 0.13
 jarVersion = 0.13
 
 registrate_version = MC1.18.2-1.1.3
+
+create_minecraft_version = 1.18.2
+flywheel_minecraft_version = 1.18.2
+create_version = 0.5.1.e-318
+flywheel_version = 0.6.10-105
