--- a/build.gradle
+++ b/build.gradle
@@ -184,6 +184,9 @@ dependencies {
     // that the dep is a ForgeGradle 'patcher' dependency, and its patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
     minecraft 'net.minecraftforge:forge:1.20.1-47.1.1'
+    implementation fg.deobf("com.simibubi.create:create-${create_minecraft_version}:${create_version}:slim") { transitive = false }
+    implementation fg.deobf("com.jozufozu.flywheel:flywheel-forge-${flywheel_minecraft_version}:${flywheel_version}")
+    implementation fg.deobf("com.tterrag.registrate:Registrate:${registrate_version}")
     //    compileOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}:api")
     //    // at runtime, use the full JEI jar
     //    runtimeOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}")
