--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
   },
   "scripts": {
     "build:bootstrap": "esbuild ./lib/bootstrap/bootstrap.ts --bundle --outfile=./src/generated/resources/assets/kasuga_lib/js/bootstrap.js",
-    "build:registry": "esbuild ./lib/modules/registry.ts --bundle --outfile=./src/generated/resources/assets/kasuga_lib/js/modules/registry.js --external:kasuga:internal/registry --platform=node"
+    "build:registry": "esbuild ./lib/modules/registry.ts --bundle --outfile=./src/generated/resources/assets/kasuga_lib/js/modules/registry.js --external:kasuga:internal/registry --platform=node",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
+  },
+  "devDependencies": {
+    "vitepress": "^1.2.3"
   }
 }
