--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,6 @@ apply plugin: 'org.spongepowered.mixin'
 
 configurations {
     shadedLib
-    implementation.extendsFrom shadedLib
 }
 
 version = "${mod_version}"
@@ -213,14 +212,17 @@ dependencies {
         exclude group: 'org.lwjgl',module: 'lwjgl'
     };
 
-    minecraftLibrary ('org.lwjgl:lwjgl-yoga:3.3.1-natives-windows'){
-        exclude group: 'org.lwjgl',module: 'lwjgl'
-    };
-    jarJar ('org.lwjgl:lwjgl-yoga:3.3.1-natives-windows'){
-        exclude group: 'org.lwjgl',module: 'lwjgl'
-    };
+    minecraftLibrary ('io.netty:netty-codec-http:[4.1,4.2)'){
+        exclude group: 'io.netty', module:'netty-handler';
+        exclude group: 'io.netty', module:'netty-handler-proxy';
+        exclude group: 'io.netty', module:'netty-codec';
+        exclude group: 'io.netty', module:'netty-transport';
+        exclude group: 'io.netty', module:'netty-buffer';
+        exclude group: 'io.netty', module:'netty-resolver';
+        exclude group: 'io.netty', module:'netty-common';
+    }
 
-    minecraftLibrary ('io.netty:netty-codec-http:4.1.77.Final'){
+    shadedLib ('io.netty:netty-codec-http:[4.1,4.2)'){
         exclude group: 'io.netty', module:'netty-handler';
         exclude group: 'io.netty', module:'netty-handler-proxy';
         exclude group: 'io.netty', module:'netty-codec';
@@ -236,13 +238,12 @@ dependencies {
     // shadedLib("org.graalvm.polyglot:js-community:23.1.0");
     // implementation("org.graalvm.sdk:graal-sdk:22.0.2");
     minecraftLibrary("org.graalvm.sdk:graal-sdk:22.3.2")
-    jarJar("org.graalvm.sdk:graal-sdk:22.3.2")
+    shadedLib("org.graalvm.sdk:graal-sdk:22.3.2")
 
     minecraftLibrary("org.graalvm.js:js:22.3.2")
     minecraftLibrary("org.graalvm.tools:chromeinspector:22.3.2")
-    jarJar("org.graalvm.js:js:22.3.2")
-
-    jarJar("org.lwjgl:lwjgl-yoga:3.3.1")
+    shadedLib("org.graalvm.tools:chromeinspector:22.3.2")
+    shadedLib("org.graalvm.js:js:22.3.2")
 
     // testImplementation "edu.carole:Mixed-Arithmetic-Logic-Interpreter:1.0.0"
     // clientAnnotationProcessor "org.spongepowered:mixin:${mixin_version}:processor"
@@ -290,9 +291,11 @@ shadowJar{
     mergeServiceFiles() // To fix graal issue: https://github.com/oracle/graaljs/issues/125
     configurations = [project.configurations.shadedLib]
     archiveClassifier.set('');
-    relocate 'org.graalvm', 'kasuga.lib.modules.org.graalvm'
-    relocate 'com.oracle', 'kasuga.lib.modules.com.oracle'
-    relocate 'com.ibm', 'kasuga.lib.modules.com.ibm'
+    relocate 'org.graalvm', 'kasuga.lib.vendor_modules.org.graalvm'
+    relocate 'com.oracle', 'kasuga.lib.vendor_modules.com.oracle'
+    relocate 'com.ibm', 'kasuga.lib.vendor_modules.com.ibm'
+    relocate 'io.netty', 'kasuga.lib.vendor_modules.io.netty'
+    relocate 'org.lwjgl', 'kasuga.lib.vendor_modules.org.lwjgl'
     finalizedBy 'reobfShadowJar'
 }
 
