--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ version = "${mod_version}"
 group = 'kasuga.lib' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'kasuga_lib'
 
-boolean isSdk = true
+boolean isSdk = false
 // Mojang ships Java 17 to end users in 1.18+, so your mod should target Java 17.
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
@@ -299,7 +299,6 @@ shadowJar{
     relocate ('io.netty.handler.codec.http', 'kasuga.lib.vendor_modules.io.netty.handler.codec.http');
     relocate ('io.netty.handler.codec.rtsp', 'kasuga.lib.vendor_modules.io.netty.handler.codec.rtsp');
     relocate ('io.netty.handler.codec.spdy', 'kasuga.lib.vendor_modules.io.netty.handler.codec.spdy');
-    relocate ('org.lwjgl.util.yoga', 'kasuga.lib.vendor_modules.org.lwjgl.util.yoga')
     relocate('interpreter','kasuga.lib.vendor_modules.interpreter');
     finalizedBy 'reobfShadowJar'
 }
