给blockEntityReg加入一些方法

--- a/build.gradle
+++ b/build.gradle
@@ -335,6 +335,6 @@ tasks.withType(JavaCompile).configureEach {
 }
 
 mixin {
-    //add sourceSets.main, 'mixins.example.refmap.json'
+    add sourceSets.main, 'kasuga.refmap.json'
     config 'kasuga.mixins.json'
 }
