--- a/build.gradle
+++ b/build.gradle
@@ -238,6 +238,10 @@ dependencies {
     minecraftLibrary("org.graalvm.sdk:graal-sdk:22.3.2")
     shadedLib("org.graalvm.sdk:graal-sdk:22.3.2")
 
+    modLib ("org.graalvm.sdk:graal-sdk:22.3.2") {
+        exclude group: 'com.ibm.icu', module 'icu4j'
+    }
+
     minecraftLibrary("org.graalvm.js:js:22.3.2")
     minecraftLibrary("org.graalvm.tools:chromeinspector:22.3.2")
     shadedLib("org.graalvm.tools:chromeinspector:22.3.2")
