--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ minecraft {
     runs {
         client {
             workingDirectory project.file('run')
-            arg '-mixin.config=kasuga.mixins.json'
+            arg '-mixin.config=kasuga_lib.mixins.json'
             // Recommended logging data for a userdev environment
             // The markers can be added/remove as needed separated by commas.
             // "SCAN": For mods scan.
@@ -74,7 +74,7 @@ minecraft {
 
         server {
             workingDirectory project.file('run')
-            arg '-mixin.config=kasuga.mixins.json'
+            arg '-mixin.config=kasuga_lib.mixins.json'
 
             property 'forge.logging.markers', 'REGISTRIES'
 
@@ -96,7 +96,7 @@ minecraft {
         // The gametest system is also enabled by default for other run configs under the /test command.
         gameTestServer {
             workingDirectory project.file('run')
-            arg '-mixin.config=kasuga.mixins.json'
+            arg '-mixin.config=kasuga_lib.mixins.json'
             // Recommended logging data for a userdev environment
             // The markers can be added/remove as needed separated by commas.
             // "SCAN": For mods scan.
@@ -122,7 +122,7 @@ minecraft {
         }
 
         data {
-            arg '-mixin.config=kasuga.mixins.json'
+            arg '-mixin.config=kasuga_lib.mixins.json'
             workingDirectory project.file('run')
 
             property 'forge.logging.markers', 'REGISTRIES'
@@ -283,7 +283,7 @@ jar {
                 "Implementation-Version"  : project.jar.archiveVersion,
                 "Implementation-Vendor"   : "MegumiKasuga",
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-                'MixinConfigs': 'kasuga.mixins.json'
+                'MixinConfigs': 'kasuga_lib.mixins.json'
         ])
     }
 }
@@ -335,7 +335,7 @@ publishing {
             // artifact javadocJar
             groupId = "kasuga.lib"
             artifactId = "kasuga_lib"
-            version = "0.13"
+            version = "0.17"
 
             fg.component(it)
         }
@@ -360,6 +360,6 @@ tasks.withType(JavaCompile).configureEach {
 }
 
 mixin {
-    add sourceSets.main, 'kasuga.refmap.json'
-    config 'kasuga.mixins.json'
+    add sourceSets.main, 'kasuga_lib.refmap.json'
+    config 'kasuga_lib.mixins.json'
 }
