--- a/build.gradle
+++ b/build.gradle
@@ -238,13 +238,29 @@ dependencies {
 
     // shadedLib("org.graalvm.polyglot:js-community:23.1.0");
     // implementation("org.graalvm.sdk:graal-sdk:22.0.2");
-    minecraftLibrary("org.graalvm.sdk:graal-sdk:22.3.2")
-    shadedLib("org.graalvm.sdk:graal-sdk:22.3.2")
+    implementation 'com.caoccao.javet:javet-core:4.0.0' // Must-have
+    implementation 'com.caoccao.javet:javet-node-linux-arm64:4.0.0'
+    implementation 'com.caoccao.javet:javet-node-linux-x86_64:4.0.0'
+    implementation 'com.caoccao.javet:javet-node-macos-arm64:4.0.0'
+    implementation 'com.caoccao.javet:javet-node-macos-x86_64:4.0.0'
+    implementation 'com.caoccao.javet:javet-node-windows-x86_64:4.0.0'
+    implementation 'com.caoccao.javet:javet-v8-linux-arm64:4.0.0'
+    implementation 'com.caoccao.javet:javet-v8-linux-x86_64:4.0.0'
+    implementation 'com.caoccao.javet:javet-v8-macos-arm64:4.0.0'
+    implementation 'com.caoccao.javet:javet-v8-macos-x86_64:4.0.0'
+    implementation 'com.caoccao.javet:javet-v8-windows-x86_64:4.0.0'
 
-    minecraftLibrary("org.graalvm.js:js:22.3.2")
-    minecraftLibrary("org.graalvm.tools:chromeinspector:22.3.2")
-    shadedLib("org.graalvm.tools:chromeinspector:22.3.2")
-    shadedLib("org.graalvm.js:js:22.3.2")
+    shadedLib 'com.caoccao.javet:javet-core:4.0.0' // Must-have
+    shadedLib 'com.caoccao.javet:javet-node-linux-arm64:4.0.0'
+    shadedLib 'com.caoccao.javet:javet-node-linux-x86_64:4.0.0'
+    shadedLib 'com.caoccao.javet:javet-node-macos-arm64:4.0.0'
+    shadedLib 'com.caoccao.javet:javet-node-macos-x86_64:4.0.0'
+    shadedLib 'com.caoccao.javet:javet-node-windows-x86_64:4.0.0'
+    shadedLib 'com.caoccao.javet:javet-v8-linux-arm64:4.0.0'
+    shadedLib 'com.caoccao.javet:javet-v8-linux-x86_64:4.0.0'
+    shadedLib 'com.caoccao.javet:javet-v8-macos-arm64:4.0.0'
+    shadedLib 'com.caoccao.javet:javet-v8-macos-x86_64:4.0.0'
+    shadedLib 'com.caoccao.javet:javet-v8-windows-x86_64:4.0.0'
 
     // testImplementation "edu.carole:Mixed-Arithmetic-Logic-Interpreter:1.0.0"
     // clientAnnotationProcessor "org.spongepowered:mixin:${mixin_version}:processor"
