--- a/gradle.properties
+++ b/gradle.properties
@@ -10,8 +10,8 @@ mixingradle_version = 0.7.+
 jei_version=11.2.0.246
 mc_version=1.19.2
 
-mod_version = 1.19.2-0.19
-jarVersion = 1.19.2-0.19
+mod_version = 1.19.2-0.19-create
+jarVersion = 1.19.2-0.19-create
 
 registrate_version = MC1.19-1.1.5
 create_minecraft_version = 1.19.2
