--- a/gradle.properties
+++ b/gradle.properties
@@ -11,8 +11,8 @@ mixingradle_version = 0.7.+
 jei_version=15.2.0.22
 mc_version=1.20.1
 
-mod_version = 1.20.1-0.19
-jarVersion = 1.20.1-0.19
+mod_version = 1.20.1-0.19-create
+jarVersion = 1.20.1-0.19-create
 
 create_minecraft_version = 1.20.1
 flywheel_minecraft_version = 1.20.1
