修改版本号为create版本

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,8 +9,8 @@ mixingradle_version = 0.7-SNAPSHOT
 jei_version=9.7.0.209
 mc_version=1.18.2
 
-mod_version = 1.18.2-0.19
-jarVersion = 1.18.2-0.19
+mod_version = 1.18.2-0.19-create
+jarVersion = 1.18.2-0.19-create
 
 registrate_version = MC1.18.2-1.1.3
 
