--- a/gradle.properties
+++ b/gradle.properties
@@ -16,7 +16,7 @@ jarVersion = 1.20.1-0.19-create
 
 create_minecraft_version = 1.20.1
 flywheel_minecraft_version = 1.20.1
-create_version = 0.5.1.e-22
-flywheel_version = 0.6.10-7
+create_version = 0.5.1.j-55
+flywheel_version = 0.6.11-13
 
 registrate_version = MC1.20-1.3.3
