修改启动顺序策略

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -68,5 +68,5 @@ Kasuga Lib is a base mod aiming at simplify modding.
     modId="create"
     mandatory=true
     versionRange="[0.5.1.e,)"
-    ordering="NONE"
+    ordering="AFTER"
     side="BOTH"
