--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ minecraft {
     runs {
         client {
             workingDirectory project.file('run')
-            arg '-mixin.config=kasuga_lib.mixins.json'
+            arg '-mixin.config=kasuga.mixins.json'
             // Recommended logging data for a userdev environment
             // The markers can be added/remove as needed separated by commas.
             // "SCAN": For mods scan.
@@ -74,7 +74,7 @@ minecraft {
 
         server {
             workingDirectory project.file('run')
-            arg '-mixin.config=kasuga_lib.mixins.json'
+            arg '-mixin.config=kasuga.mixins.json'
 
             property 'forge.logging.markers', 'REGISTRIES'
 
@@ -95,7 +95,7 @@ minecraft {
         // The gametest system is also enabled by default for other run configs under the /test command.
         gameTestServer {
             workingDirectory project.file('run')
-            arg '-mixin.config=kasuga_lib.mixins.json'
+            arg '-mixin.config=kasuga.mixins.json'
             // Recommended logging data for a userdev environment
             // The markers can be added/remove as needed separated by commas.
             // "SCAN": For mods scan.
@@ -121,7 +121,7 @@ minecraft {
         }
 
         data {
-            arg '-mixin.config=kasuga_lib.mixins.json'
+            arg '-mixin.config=kasuga.mixins.json'
             workingDirectory project.file('run')
 
             property 'forge.logging.markers', 'REGISTRIES'
@@ -291,7 +291,7 @@ jar {
                 "Implementation-Version"  : project.jar.archiveVersion,
                 "Implementation-Vendor"   : "MegumiKasuga",
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-                'MixinConfigs': 'kasuga_lib.mixins.json'
+                'MixinConfigs': 'kasuga.mixins.json'
         ])
     }
 }
@@ -370,6 +370,6 @@ tasks.withType(JavaCompile).configureEach {
 }
 
 mixin {
-    add sourceSets.main, 'kasuga_lib.refmap.json'
-    config 'kasuga_lib.mixins.json'
+    add sourceSets.main, 'kasuga.refmap.json'
+    config 'kasuga.mixins.json'
 }
