feat(deps): add platform-specific Javet dependencies and build properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,6 @@ mod_version = 1.19.2-0.20
 jarVersion = 1.19.2-0.20
 
 registrate_version = MC1.19-1.1.5
+
+javetLibraryExcluding = false
+compileTarget = normal
