--- a/build.gradle
+++ b/build.gradle
@@ -248,7 +248,19 @@ dependencies {
     minecraftLibrary 'com.caoccao.javet:javet-v8-windows-x86_64:4.0.0'
 
     shadedLib 'com.caoccao.javet:javet-core:4.0.0' // Must-have
-    shadedLib 'com.caoccao.javet:javet-v8-windows-x86_64:4.0.0' // Currently, we only support Win x86-64 structure in main build
+
+    if ( !javetLibraryExcluding || javetLibraryExcluding == "false" ){
+        if( compileTarget == 'macos') {
+            System.out.println("Building for MacOS")
+            shadedLib 'com.caoccao.javet:javet-v8-macos-arm64:4.0.0'
+            shadedLib 'com.caoccao.javet:javet-v8-macos-x86_64:4.0.0'
+        } else {
+            System.out.println("Building for Windows & Linux")
+            shadedLib 'com.caoccao.javet:javet-v8-linux-arm64:4.0.0'
+            shadedLib 'com.caoccao.javet:javet-v8-linux-x86_64:4.0.0'
+            shadedLib 'com.caoccao.javet:javet-v8-windows-x86_64:4.0.0' // Currently, we only support Win x86-64 structure in main build
+        }
+    }
 
     shadedLib 'org.apache.httpcomponents:httpcore:4.4.14'
     shadedLib 'org.apache.httpcomponents:httpclient:4.5.13'
