--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx7G
+org.gradle.jvmargs=-Xmx7G -Dhttp.readTimeout\=240000 -Dhttp.connectionTimeout\=60000 -Dhttp.socketTimeout\=120000 -Dorg.gradle.internal.http.socketTimeout\=120000 -Dorg.gradle.internal.http.connectionTimeout\=60000 -Dorg.gradle.internal.http.readTimeout\=240000
 org.gradle.daemon=false
 
 curios_version =1.19.2-5.1.1.0
