--- a/gradle.properties
+++ b/gradle.properties
@@ -14,6 +14,11 @@ mc_version=1.20.1
 mod_version = 1.20.1-0.20-create
 jarVersion = 1.20.1-0.20-create
 
+create_minecraft_version = 1.20.1
+flywheel_minecraft_version = 1.20.1
+create_version = 0.5.1.j-55
+flywheel_version = 0.6.11-13
+
 registrate_version = MC1.20-1.3.3
 
 javetLibraryExcluding = false
