fix: gradle.yml grammar error

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,7 +22,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-      submodules: true
+      with:
+        submodules: true
 
     - name: Set up JDK 17
       uses: actions/setup-java@v4
