--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,10 @@ java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
 jarJar.enable();
 
+tasks.named('jarJar') {
+    archiveClassifier.set('jarjar');
+}
+
 println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
 minecraft {
 
